# jibao-claude

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.claude/commands/: analyze.md  play.md
docs/: api-reference.md
docs/skills/: combat.md  deckbuilding.md  defect-mechanics.md  modding-setup.md  pathing.md  probability.md
mod/: McpMod.Actions.cs  McpMod.Formatting.cs  McpMod.Helpers.cs  McpMod.MultiplayerState.cs  McpMod.StateBuilder.cs  McpMod.cs  README.md  STS2_MCP.csproj  STS2_MCP.sln  build.sh  mod_manifest.json
src/jibao/: __init__.py  cli.py  driver.py  models.py
